# CMEPDA

./: .gitattributes  .gitignore  .gitmodules  ML.ipynb  README.md
Geant4/: Geant4.md
Geant4/FirstExample/: CMakeLists.txt  a.sh  analysis.ipynb  run.mac  sim.cc  vis.mac
Geant4/FirstExample/include/: MyMaterials.hh  action.hh  construction.hh  detector.hh  generator.hh  physics.hh  run.hh
Geant4/FirstExample/src/: action.cc  construction.cc  detector.cc  generator.cc  physics.cc  run.cc
cpp/: file.root  pyroot.ipynb  root.ipynb
parallel/: GPU.md  Parallel_CPU.md  multiprocessing.ipynb  pycuda.ipynb
parallel/cuda/: array_add  array_add.cu  hello_world  hello_world.cu
python/: python.ipynb
slides/appunti/: Lez-081121.md  Lez-111121.ipynb  Lez-111121.md  Lez-151121.md  Lez-GNN.md  Lez081121.ipynb  Lez091221.md  Lez1-20.09.21.md  Lez1-20.09.21_tmp.html  Lez10-211021-DESKTOP-O16CFP3.md  Lez10-211021.md  Lez2-23.09.21.md  Lez3-270921.md  Lez4-300921.md  Lez5-041021.md  Lez6-071021.md  Lez7-111021.md  Lez8-141021.md  Lez9-181021.md  chiedere a baldini.txt  vedere autonomamente.txt
slides/parallel/: handson_gpu_2021.ipynb
